TASK: Fix right alignment for SecondaryToolbar
This change also use flexbox

--- a/packages/neos-ui/src/Containers/SecondaryToolbar/style.css
+++ b/packages/neos-ui/src/Containers/SecondaryToolbar/style.css
@@ -1,4 +1,5 @@
 .secondaryToolbar {
+    display: flex;
     position: absolute;
     top: 41px;
     left: 0;
@@ -9,15 +10,6 @@
     transition: .2s ease padding;
     will-change: padding;
     border-bottom: 1px solid var(--brandColorsContrastDark);
-
-    &:before,
-    &:after {
-        content: '';
-        display: table;
-    }
-    &:after {
-        clear: both;
-    }
 }
 .secondaryToolbar--isMovedDown {
     top: 151px; /* height of EditModePanel added */
@@ -32,7 +24,7 @@
     display: none;
 }
 .secondaryToolbar__rightHandedActions {
-    float: right;
+    margin-left: auto;
 }
 
 .dimensionCategory__icon {
